RESOLVED FIXED270760
[WebRTC] Incorrect length check in getSequenceHeaderOBU() for AV1 decoder support
https://bugs.webkit.org/show_bug.cgi?id=270760
Summary [WebRTC] Incorrect length check in getSequenceHeaderOBU() for AV1 decoder sup...
David Kilzer (:ddkilzer)
Reported 2024-03-09 19:37:09 PST
Incorrect length check in WebCore::getSequenceHeaderOBU() for WebRTC AV1 decoder support. Regressed with: Upstream WebRTC AV1 decoder support <https://bugs.webkit.org/show_bug.cgi?id=262481> <rdar://116343842> <https://commits.webkit.org/274002@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-09 19:37:30 PST
David Kilzer (:ddkilzer)
Comment 2 2024-03-09 19:39:48 PST
David Kilzer (:ddkilzer)
Comment 3 2024-03-09 19:49:55 PST
EWS
Comment 4 2024-03-11 08:31:29 PDT
Committed 275904@main (25257b2a5f81): <https://commits.webkit.org/275904@main> Reviewed commits have been landed. Closing PR #25686 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.