[WebRTC] Incorrect length check in getSequenceHeaderOBU() for AV1 decoder support https://bugs.webkit.org/show_bug.cgi?id=270760 <rdar://124334942>

Reviewed by Youenn Fablet.

* Source/WebCore/platform/video-codecs/cocoa/RTCVideoDecoderVTBAV1.mm:
(BitReader::readBit):
- Make method private since it's only used within the class.
(readULEBSize):
- Move std::numeric_limits<uint32_t>::max() check after `value` is
  computed.  This was a secondary bug that caused unsigned integer
  overflow in getSequenceHeaderOBU().
(getSequenceHeaderOBU):
- Change `payloadSize` to be a Checked<size_t> variable.
- Fix length check to include `index + payloadSize`.  This was the
  original bug that caused more than data.size() bytes to be read.

Canonical link: https://commits.webkit.org/275904@main