Source/WebCore/platform/video-codecs/cocoa/RTCVideoDecoderVTBAV1.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2022 Apple Inc. All rights reserved.
+ * Copyright (C) 2022-2024 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -33,6 +33,7 @@
 #import <span>
 #import <webrtc/modules/video_coding/include/video_error_codes.h>
 #import <wtf/BlockPtr.h>
+#import <wtf/CheckedArithmetic.h>
 #import <wtf/FastMalloc.h>
 #import <wtf/RetainPtr.h>
 
@@ -53,9 +54,10 @@ public:
     }
 
     std::optional<uint64_t> read(size_t);
-    std::optional<bool> readBit();
 
 private:
+    std::optional<bool> readBit();
+
     std::span<const uint8_t> m_data;
     size_t m_index { 0 };
     uint8_t m_currentByte { 0 };
@@ -100,9 +102,9 @@ static size_t readULEBSize(std::span<const uint8_t> data, size_t& index)
 
         uint8_t dataByte = data[index++];
         uint8_t decodedByte = dataByte & 0x7f;
+        value |= decodedByte << (7 * cptr);
         if (value >= std::numeric_limits<uint32_t>::max())
             return 0;
-        value |= decodedByte << (7 * cptr);
         if (!(dataByte & 0x80))
             break;
     }
@@ -129,8 +131,8 @@ static std::optional<std::pair<std::span<const uint8_t>, std::span<const uint8_t
         if (hasExtension)
             ++index;
 
-        size_t payloadSize = readULEBSize(data, index);
-        if (index >= data.size())
+        Checked<size_t> payloadSize = readULEBSize(data, index);
+        if (index + payloadSize >= data.size())
             return { };
 
         if (headerType == 1) {
